--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@supabase/supabase-js": "^2.91.1",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.32",
+    "expo-auth-session": "~7.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-image-picker": "17.0.10",
     "expo-linking": "8.0.11",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^12.6.0",
     "lodash": "^4.17.21",
     "react": "19.1.0",
